--- a/public/style/nav-footer.css
+++ b/public/style/nav-footer.css
@@ -43,7 +43,7 @@
   display: flex;
   justify-content: space-around;
   position: relative;
-  bottom: 0;
+  margin-bottom: 0;
   width: 100%;
   height: 60px;
   text-align: center;
