--- a/public/style/style.css
+++ b/public/style/style.css
@@ -477,7 +477,7 @@ h1 {
   display: flex;
   justify-content: space-around;
   position: relative;
-  bottom: 0;
+  margin-bottom: 0;
   width: 100%;
   height: 60px;
   text-align: center;
@@ -536,8 +536,7 @@ body {
   margin: 0;
 }
 #root {
-  width: 100%;
-  height: 100%;
+  height: 100vh;
   padding: 0;
   box-sizing: border-box;
 }
