--- a/public/src/mainLobby.less
+++ b/public/src/mainLobby.less
@@ -7,7 +7,7 @@
   align-items: center;
 
   h1 {
-    color: @header;
+    color: white;
     background-clip: text;
     -webkit-background-clip: text;
     font-weight: bolder;
@@ -18,6 +18,10 @@
   }
   h2{
     color: white;
+    font-family: "kidGames";
+    text-shadow: 2px 2px 2px #000000;
+    font-weight: lighter;
+    margin: 20px;
   }
 }
 
@@ -28,42 +32,63 @@
   flex-direction: row;
   flex-wrap: wrap;
   gap: 40px;
-  margin-top: 20px;
-  margin-bottom: 50px;
-
+  box-shadow: 0 0 0.7em 0 black;
+  border-radius: 20px;
+  margin-bottom: 30px;
 }
 
 .eachGame {
   background-color: rgb(219, 236, 250);
   border-radius: 10px;
-  padding: 30px;
+  padding: 10px;
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
+  max-width: 250px;
+  margin: 20px;
+  h4 {
+    color: @cookieLobbyFont;
+    text-shadow: 2px 2px 2px #000000;
+    font-family: "kidGames";
+    font-weight: lighter;
+    font-size: 1.25em;
+    text-align: center;
+  }
+  span {
+    color: darkred;
+    text-shadow: 2px 2px 2px #000000;
+    font-family: "kidGames";
+    font-weight: lighter;
+    font-size: 1.25em;
+    text-align: center;
+  }
 
   .gameTitle {
     display: flex;
     flex-direction: column;
     align-items: center;
 
-    h2,
-    h4 {
-      color: black;
+    h2{
+      color: @cookieLobbyFont;
+      text-shadow: 2px 2px 2px #000000;
+      font-family: "kidGames";
+      font-weight: lighter;
+      font-size: 1.5em;
+      text-align: center;
     }
-
+    
   }
 }
 
 
 .cookieClicker-mainLobby-container {
-  width: 300px;
-  height: 300px;
+  width: 150px;
+  height: 150px;
   background-image: url("../images/cookie\ background.jpg");
   background-size: cover;
   border-radius: 20px;
-  margin-bottom: 10px;
-
+  margin: 20px;
 }
 
 .gameTwo-mainLobby-container {
@@ -74,13 +99,14 @@
 .mainLobby-players-container {
   display: flex;
   flex-wrap: wrap;
-  flex-direction: row;
-  justify-content: space-between;
-  gap: 20px;
+  flex-direction: column;
   border: none;
   max-width: 900px;
   width: 100%;
-  margin:70px;
+  box-shadow: 0 0 0.7em 0 black;
+  border-radius: 20px;
+  margin-bottom: 30px;
+  max-height: 400px;
   h4{
     color: yellow;
     text-shadow: 2px 2px black;
@@ -99,11 +125,19 @@
 }
 
 .main-lobby-player {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
   background-color: rgb(142, 181, 244);
   border-radius: 10px;
   padding: 10px;
   border: dimgray;
   box-shadow: 0 0 0.5em .5em whitesmoke;
+  margin: 20px;
+  width: 420px;
+  h3{
+    margin: 20px;
+  }
 }
 
 .eachGame:hover {
