--- a/public/src/nav-footer.less
+++ b/public/src/nav-footer.less
@@ -51,7 +51,9 @@
         display: flex;
         flex-wrap: wrap;
     }
-
+    .dropdown:hover .dropdown-content{
+        left: 0;
+    }
 
 
 }
@@ -73,6 +75,7 @@
     background-color: #486BBD;
     border-radius: 5px;
     margin-right: 30px;
+    right: 0;
 }
 
 .dropdown-content {
