--- a/public/style/style.css
+++ b/public/style/style.css
@@ -910,6 +910,9 @@ a:visited {
     display: flex;
     flex-wrap: wrap;
   }
+  .dropdown:hover .dropdown-content {
+    left: 0;
+  }
 }
 .dropdown {
   display: inline-block;
@@ -928,6 +931,7 @@ a:visited {
   background-color: #486BBD;
   border-radius: 5px;
   margin-right: 30px;
+  right: 0;
 }
 .dropdown-content {
   display: none;
