--- a/public/src/nav-footer.less
+++ b/public/src/nav-footer.less
@@ -23,7 +23,7 @@
         }
     }
 
-    span {
+    .logo-title {
         display: flex;
         text-decoration: none;
         font-size: 24px;
@@ -63,7 +63,6 @@
     position:relative;
     background-color: #486BBD;
     font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
-    margin-right: 10px;
     .menu-button {
         margin-right: 20px;
         width:120px;
